# High-Dimensional-Inspector

./: .gitignore  CMakeLists.txt  imgui.ini
applications/: CMakeLists.txt  bh_tsne_cmd.cpp  bin_to_txt.cpp  evaluation_cmd.cpp  gpgpu_tsne_cmd.bak  gpgpu_tsne_cmd.cpp  renderer_cmd.cpp  simulation_generator_cmd.cpp  tsne_cmd.cpp  vec_to_bin.cpp
applications/bak/: atsne_cmd.cpp  atsne_pva_cmd.cpp  simple_embedding_viewer.cpp  tsne_cmd.cpp  tsne_distance_matrix_cmd.cpp
applications/command_line_tools/: 3d_embedding_viewer.cpp  CMakeLists.txt  bhtsne_cmd.cpp  gpgpusne_cmd.cpp
applications/command_line_tools/data_conversion/: CMakeLists.txt  hyperspectral_image_2_hdvol.cpp
applications/command_line_tools/hsne_volume_analyzer/: CMakeLists.txt
applications/command_line_tools/waow_visualization/: CMakeLists.txt
applications/data_conversion/: CMakeLists.txt  hyperspectral_image_2_hdvol.cpp  truncate_bin.cpp
applications/tdd/: CMakeLists.txt
applications/visual_tests/: CMakeLists.txt
cmake/Modules/: FindFLANN.cmake
hdi/analytics/: CMakeLists.txt
hdi/clustering/: CMakeLists.txt
hdi/data/: CMakeLists.txt  embedding_inl.h  map_mem_eff.h  set_intersection_tree.cpp  set_intersection_tree.h  shader.cpp  shader.h
hdi/debug/: CMakeLists.txt
hdi/debug/renderer/: bvh.cpp  bvh.hpp  dual_hierarchy.cpp  dual_hierarchy.hpp  dual_hierarchy_shaders_2d.h  embedding.cpp  embedding.hpp  embedding_bvh.cpp  embedding_bvh.hpp  embedding_bvh_shaders_2d.h  embedding_bvh_shaders_3d.h  embedding_shaders_2d.h  embedding_shaders_3d.h  field.cpp  field.hpp  field_bvh.cpp  field_bvh.hpp  field_bvh_shaders_2d.h  field_bvh_shaders_3d.h  field_hierarchy.cpp  field_hierarchy.hpp  field_hierarchy_shaders_2d.h  field_hierarchy_shaders_3d.h  pixel_bvh.cpp  pixel_bvh.hpp  point_bvh.cpp  point_bvh.hpp  renderer.cpp  renderer.hpp
hdi/debug/utils/: input.cpp  input.hpp  trackball.cpp  trackball.hpp  window.cpp  window.hpp
hdi/dimensionality_reduction/: CMakeLists.txt  abstract_gradient_descent_tsne.h  evaluation.h  gpgpu_tsne.cpp  gpgpu_tsne.h  gradient_descent_tsne.cpp  gradient_descent_tsne.h  gradient_descent_tsne_2d.cpp  gradient_descent_tsne_2d.h  gradient_descent_tsne_3d.cpp  gradient_descent_tsne_3d.h  gradient_descent_tsne_texture.h  gradient_descent_tsne_texture_inl.h  hd_joint_probability_generator_inl.h  sparse_tsne_user_def_probabilities.h  sparse_tsne_user_def_probabilities_inl.h  tsne_parameters.h
hdi/dimensionality_reduction/gpgpu_sne/: 2d_bh_field_computation.cpp  2d_bh_field_computation.h  2d_bh_quadtree_computation.cpp  2d_bh_quadtree_computation.h  2d_density_field_computation.cpp  2d_density_field_shaders.h  2d_density_tree_computation.cpp  2d_density_tree_computation.h  2d_density_tree_shaders.h  2d_dtbh_field_computation.cpp  2d_dtbh_field_computation.h  2d_field_computation.cpp  2d_field_computation.h  2d_field_shaders.h  2d_gpgpu_sne_compute.cpp  2d_gpgpu_sne_compute.h  2d_gpgpu_sne_shaders.h  2d_screen_output.cpp  2d_screen_output.h  2d_screen_shaders.h  2d_utils.h  3d_bvh_field_computation.cpp  3d_bvh_field_computation.h  3d_bvh_field_shaders.h  3d_compute_shaders.glsl  3d_compute_shaders.h  3d_field_computation.cpp  3d_field_computation.h  3d_field_shaders.h  3d_gpgpu_sne_compute.cpp  3d_gpgpu_sne_compute.h  3d_gpgpu_sne_shaders.h  3d_utils.h  compute_shaders.glsl  constants.h  depth_compute_shaders.h  depth_field_computation.cpp  depth_field_computation.h  depth_field_shaders.h  depth_gpgpu_sne.cpp  (+32 more)
hdi/dimensionality_reduction/gpgpu_sne/bak/: 2d_bh_field_computation.cpp  2d_bh_field_computation.h  2d_bh_field_shaders.h  2d_bh_quadtree_computation.cpp  2d_bh_quadtree_computation.h  2d_bh_quadtree_shaders.h  2d_dtbh_field_computation.cpp  2d_dtbh_field_computation.h  2d_dtbh_field_shaders.h  depth_field_computation.cpp  depth_field_computation.h  field_compute_3d_cut.cpp  field_compute_3d_cut.h
hdi/dimensionality_reduction/gpgpu_sne/bvh/: 3d_bvh_compute.cu  3d_bvh_compute.h  3d_bvh_kernels.cu  3d_bvh_kernels.h  bvh.cpp  bvh.cu  bvh.h  bvh_constr.cu  bvh_constr.h  bvh_kern.cu  bvh_kern.h  bvh_layout.h  bvh_memory.cu  bvh_memory.h  bvh_renderer.cpp  bvh_renderer.h  bvh_renderer_shaders.h  bvh_shaders_2d.h  bvh_shaders_3d.h  bvh_sort.cu  bvh_sort.h  cu_timer.cu  cu_timer.h  cu_utils.h  embedding_bvh.cpp  embedding_bvh.h  embedding_bvh_shaders_2d.h  embedding_bvh_shaders_3d.h  field_bvh.cpp  field_bvh.h  field_bvh_shaders_2d.h  field_bvh_shaders_3d.h  gl_bvh.cpp  gl_bvh.h  gl_bvh_sort.cu  pixel_bvh.cpp  pixel_bvh.h  pixel_bvh_shaders_2d.h  point_bvh.cpp  point_bvh.h
hdi/dimensionality_reduction/gpgpu_sne/bvh/bak/: bvh.cu  bvh.cu.bak  bvh.h  bvh.h.bak  bvh_kern.cu  bvh_kern.h  bvh_layout.h  bvh_memory.cu  bvh_memory.h
hdi/dimensionality_reduction/gpgpu_sne/bvh/utils/: assert.h  interop.cu  interop.h  timer.cu  timer.h
hdi/dimensionality_reduction/gpgpu_sne/hierarchy/: field_hierarchy.cpp  field_hierarchy.h  field_hierarchy_shaders_2d.h  field_hierarchy_shaders_3d.h
hdi/dimensionality_reduction/gpgpu_sne/utils/: assert.h  cub_interop.cu  cub_interop.h  enum.h  timer.h  types.h  verbatim.h  verbatim_glsl.h
hdi/dimensionality_reduction/gpgpu_sne/utils/cuda/: assert.h  cub_interop.cu  cub_interop.h  interop.cu  timer.cu  timer.h
hdi/utils/: CMakeLists.txt  dataset_utils.cpp  dataset_utils.h  glad.cpp  io.cpp  io.h  log_helper_functions.h  math_utils_inl.h  visual_utils.cpp  visual_utils.h  visual_utils_inl.h
hdi/utils/bak/: dataset_utils.h
hdi/utils/glad/: glad.h
hdi/visualization/: CMakeLists.txt  abstract_pointcloud_drawer.h  pointcloud_canvas_qobj.cpp  pointcloud_canvas_qobj.h  pointcloud_drawer_fixed_color.cpp  pointcloud_drawer_fixed_color.h  pointcloud_drawer_labels.cpp  pointcloud_drawer_labels.h  scatterplot_drawer_labels.h
lib/CRoaringAmalganation/src/: roaring.c
lib/imgui/: CMakeLists.txt
tests/scripts/: fashion_nnp.py  fashion_param.py  fashion_test.py  imagenet_nnp.py  imagenet_param.py  imagenet_test.py  mnist_nnp.py  mnist_param.py  mnist_test.py  parameter_tests.py  run_tests.py  w2v_nnp.py  w2v_param.py  w2v_test.py
(+9 files in other folders)
